--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>All users</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container-fluid">
@@ -51,7 +47,7 @@
             </div>
 
             <div class="tab-content" id="nav-tabContent">
-                <!--USERLIST PAGE-->
+                <!--USERLIST-->
                 <div class="tab-pane fade show active" id="user-list" aria-labelledby="user-list-tab" role="tabpanel">
                     <div class="card">
                         <div class="card-header">
@@ -78,7 +74,7 @@
                         </div>
                     </div>
                 </div>
-                <!--NEW USER PAGE-->
+                <!--NEW USER-->
                 <div class="tab-pane fade" id="new-user" aria-labelledby="new-user-tab" role="tabpanel">
                     <div class="card">
                         <div class="card-header">
@@ -88,35 +84,21 @@
                             <form th:method="POST" action="/api/user" id="saveForm">
                                 <label class="form-label" for="username">Username:</label>
                                 <input class="form-control" type="text" name="username" id="username" required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('username')}"-->
-                                <!--                                     th:errors="*{username}"></div>-->
 
                                 <label class="form-label" for="password">Password:</label>
-                                <input class="form-control" type="password" name="password" id="password"
-                                       required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('password')}"-->
-                                <!--                                     th:errors="*{password}"></div>-->
+                                <input class="form-control" type="password" name="password" id="password" required/>
 
                                 <label class="form-label" for="first_name">First name:</label>
-                                <input class="form-control" type="text" name="firstName" id="first_name"
-                                       required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('firstName')}"-->
-                                <!--                                     th:errors="*{firstName}"></div>-->
+                                <input class="form-control" type="text" name="firstName" id="first_name" required/>
 
                                 <label class="form-label" for="last_name">Last name:</label>
                                 <input class="form-control" type="text" name="lastName" id="last_name" required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('lastName')}"-->
-                                <!--                                     th:errors="*{lastName}"></div>-->
 
                                 <label class="form-label" for="age">Age:</label>
                                 <input class="form-control" type="text" name="age" id="age" required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('age')}"-->
-                                <!--                                     th:errors="*{age}"></div>-->
 
                                 <label class="form-label" for="email">Email:</label>
                                 <input class="form-control" type="text" name="email" id="email" required/>
-                                <!--                                <div class="form-text text-danger" th:if="${#fields.hasErrors('email')}"-->
-                                <!--                                     th:errors="*{email}"></div>-->
 
                                 <label class="form-label" for="roles">Roles:</label>
                                 <select class="form-select" id="roles" name="roles" multiple>
@@ -133,7 +115,7 @@
     </div>
 </div>
 
-<!--MODAL FORM-->
+<!--MODAL-->
 <div class="modal fade" id="modalFrame" data-bs-backdrop="static"
      data-bs-keyboard="false" tabindex="-1"
      aria-labelledby="modalLabel" aria-hidden="true">
@@ -181,7 +163,6 @@
                 </button>
                 <button type="submit" class="btn btn-primary" form="modalForm" id="modal-submit"></button>
             </div>
-            </form>
         </div>
     </div>
 </div>
